<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

	<PreferenceCategory
		android:title="@string/pref_route_calculation" >
		<SwitchPreference
			android:key="route_mode"
	      	android:title="@string/pref_route_calculation_shortest"
	      	android:switchTextOff="@string/by_dur"
	      	android:switchTextOn="@string/by_dist" />
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/pref_reset_instruction_header" >
		<Preference
			android:key="pref_reset_instruction_text"
			android:title="@string/pref_reset_instruction_title" />
	</PreferenceCategory>
 
	<PreferenceCategory
		android:title="@string/pref_about_header" >
		<Preference
		    android:key="pref_about"
		    android:title="@string/pref_about_title"/>
	</PreferenceCategory>
</PreferenceScreen>