<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/origin_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient"
    android:fillViewport="true"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout_origin_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

<!--             <ImageView
                android:id="@+id/origin_routy_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/origin_logo"
                android:minHeight="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/whitesplashhi" /> -->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_origin_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/linearLayout_origin_top"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/origin_textview_welcome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/origin_welcome"
                android:textColor="@color/ShitGold"
                android:textSize="19dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/origin_address_field"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/origin_hint"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/White" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/find_user_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/linearLayout_origin_bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/findwhite"
            android:onClick="findUserLocation"
            android:text="@string/find_user_prompt" />

        <Button
            android:id="@+id/enter_destinations_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="true"
            android:layout_below="@id/linearLayout_origin_bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/nextwhite"
            android:minHeight="48dip"
            android:onClick="goToDestinationsScreen"
            android:text="@string/goto_destinations" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/enter_destinations_button"
	    android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_destinations_startingat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/destination_origin"
            android:textColor="@color/ShitGold"
            android:textSize="23dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textview_destinations_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textColor="@color/White"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textview_destinations_goingto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/destination_question"
            android:textColor="@color/ShitGold"
            android:textSize="22dp"
            android:textStyle="bold|italic"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textview_destinations_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/destination_subtext"
            android:textColor="@color/ShitGold"
            android:textSize="18dp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/LinearLayout_destinations"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/button_destination_add_new"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/poswhiteonly"
            android:drawablePadding="15dp"
            android:onClick="onAddDestinationClicked"
            android:text="@string/destination_add"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LinearLayout_destinations_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="35dp"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_test_defaults"
                style="android:buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/toggle_instructions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/destination_toggle_instructions"
                android:textColor="@color/ShitGold"
                android:textSize="18dp"
                android:textStyle="bold|italic"
                android:typeface="normal" />

            <Switch
                android:id="@+id/toggleDistDur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:switchTextAppearance="@style/Toggle"
                android:textOff="@string/by_dist"
                android:textOn="@string/by_dur" />

            <ImageButton
                android:id="@+id/button_route_it"
                android:contentDescription="@string/routeitdesc"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="acceptDestinations"
                android:src="@drawable/routeitwhitewithbox" />
        </LinearLayout>
    </LinearLayout>
        
        
    </RelativeLayout>

</ScrollView>