<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">
    
    <ImageView 
        android:id="@+id/imageView2"
        android:contentDescription="@string/poweredbygoogledesc"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_above="@+id/textview_origin_purpose"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:src="@drawable/poweredbymed"/>
    
    <ImageView
           android:id="@+id/imageView1"
           android:contentDescription="@string/biglogodesc"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
           android:layout_marginBottom="60dp"
           android:src="@drawable/hisplashwhite"/>
    
    <TextView
                android:id="@+id/textview_origin_purpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/progressbar_splash_loading"
                android:layout_marginBottom="30dp"
                android:text="@string/origin_purpose"
                android:textColor="@color/White"
                android:textSize="20dp"
                android:textStyle="bold|italic" />
    
    <ProgressBar 
        android:id="@+id/progressbar_splash_loading" 
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" 
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:indeterminateOnly="true" 
        android:visibility="visible" />
    
</RelativeLayout>